--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,15 @@ body {
     max-width: 500px;
     max-height: 500px;
     height: 70vw;
+    outline: none;
+    border: none; /* Это если у кнопки есть бордер */
+  background: transparent; /* Чтобы фоновое выделение исчезло */
 }
+
+.photo-button:focus {
+    outline: none;
+    box-shadow: none;
+  }
 
 /* Эффект нажатия */
 .main-button:active {
